# Unstructured-Data-Processing

./: .claudeignore  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: build-pipeline.md  save-state.md
.claude/skills/data-scientist/: SKILL.md
.claude/skills/jupyter-master/: SKILL.md
code/MidtermProject/: pipeline_v1.py
code/MidtermProject/doc/: EDA_분석_보고서.docx
code/MidtermProject/docs/: student_guide.md
code/Week02/: UD-02-600__lecture-live-coding-student.ipynb
code/Week03/: UD-03-600__week03-student.ipynb  UD-03-700__ai-regex-student.ipynb  UD-03-800__wordcloud-student.ipynb
code/Week03/assignment/: UD-02-700_python-strings-practice-student_이동원_202136006.ipynb
code/Week03/assignment2/: UD-02-710-pandas-str-practice-student_이동원_202136006.ipynb
code/Week04/: UD-04-700__requests-basics-instructor.ipynb  UD-04-700__requests-basics-student.ipynb  UD-04-705__static-vs-dynamic-instructor.ipynb  UD-04-705__static-vs-dynamic-student.ipynb  UD-04-710__beautifulsoup-parsing-instructor.ipynb  UD-04-710__beautifulsoup-parsing-student.ipynb  UD-04-720__csv-save-eda-student.ipynb  lee-gilyeo-articles.csv
code/Week04/assignment/: corpus_가천대.csv  (+1 more)
code/Week05/: UD-05-400__vectorization-student.ipynb  UD-05-410__similarity-pecab-student.ipynb  UD-05-420__full-pipeline-student.ipynb
code/Week06/: UD-06-500__pipeline-classification-instructor.ipynb  UD-06-500__pipeline-classification-student.ipynb
code/Week07/: UD-07-700__seoul-120-lda-companion-student.ipynb  sample_submission.csv
(+5 files in other folders)
