[project]
name = "unstructured-data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-httplib2>=0.3.1",
    "ipykernel>=7.2.0",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.27.0",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "pecab>=1.0.8",
    "playwright>=1.58.0",
    "pyldavis>=3.4.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "shap>=0.51.0",
    "wordcloud>=1.9.6",
]

